Bug 412905 - bugged "reference images" layer
Summary: bugged "reference images" layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: 4.2.7
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2019-10-13 13:05 UTC by WOAS
Modified: 2019-11-08 15:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description WOAS 2019-10-13 13:05:47 UTC
SUMMARY

a technical layer(which can't be seen in Layers docker) can be seen in timeline docker and removing that layer corrupts something(?)

STEPS TO REPRODUCE
1. Create a new file
2. enable timeline docker
3. import reference image
4. new layer appears with "visible in timeline" checked.
5. if you uncheck ^ the layer doesn't disappear from timeline
6. if you remove it reference images disappear and it causes random issues

SOFTWARE/OS VERSIONS
Windows10
Comment 1 wolthera 2019-10-13 13:06:41 UTC
Yeah, can confirm here, and it also happens with the assistant tool/guides/grids for the same reason.
Comment 2 Halla Rempt 2019-10-16 12:06:38 UTC
Is that because we changed the default for layers to always show in the timeline recently?

See 

commit 3def70fa56ff43ebeb8e8d64e5b61233ff7ef584
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Fri Sep 13 16:11:19 2019 +0300
Set "Show in Timeline" to "on" by default
During the sprint we discussed that with painters and they said that
it would be much easier for them if all the layers would be visible
in the timeline by default. If the user can always hide a layer if
he likes.
CC:kimageshop@kde.org
Comment 3 Dmitry Kazakov 2019-11-08 15:53:04 UTC
Git commit 7ebb75f1311a9f15b31d3af0c321d044f168b617 by Dmitry Kazakov.
Committed on 08/11/2019 at 15:52.
Pushed by dkazakov into branch 'master'.

Fix visibility of Reference Layer and Global Selection Mask in Timeline

1) Fake nodes should not be visible in the timeline
2) Global selection should be visible depending on the GUI option,
   therefore we should link TimelineNodeListKeeper to
   KisNodeDisplayModeAdapter, so it would get proper notifications.

M  +13   -0    libs/ui/flake/kis_node_dummies_graph.cpp
M  +2    -0    libs/ui/flake/kis_node_dummies_graph.h
M  +1    -1    libs/ui/kis_model_index_converter.cpp
M  +2    -2    libs/ui/kis_node_manager.cpp
M  +4    -2    plugins/dockers/animation/timeline_docker.cpp
M  +15   -2    plugins/dockers/animation/timeline_frames_index_converter.cpp
M  +3    -0    plugins/dockers/animation/timeline_frames_index_converter.h
M  +5    -2    plugins/dockers/animation/timeline_frames_model.cpp
M  +4    -1    plugins/dockers/animation/timeline_frames_model.h
M  +46   -8    plugins/dockers/animation/timeline_node_list_keeper.cpp
M  +14   -1    plugins/dockers/animation/timeline_node_list_keeper.h

https://invent.kde.org/kde/krita/commit/7ebb75f1311a9f15b31d3af0c321d044f168b617
Comment 4 Dmitry Kazakov 2019-11-08 15:57:10 UTC
Git commit 02f9b56f281a55fb0f014f4fe0e0559cc8b2be88 by Dmitry Kazakov.
Committed on 08/11/2019 at 15:56.
Pushed by dkazakov into branch 'krita/4.2'.

Fix visibility of Reference Layer and Global Selection Mask in Timeline

1) Fake nodes should not be visible in the timeline
2) Global selection should be visible depending on the GUI option,
   therefore we should link TimelineNodeListKeeper to
   KisNodeDisplayModeAdapter, so it would get proper notifications.

M  +13   -0    libs/ui/flake/kis_node_dummies_graph.cpp
M  +2    -0    libs/ui/flake/kis_node_dummies_graph.h
M  +1    -1    libs/ui/kis_model_index_converter.cpp
M  +2    -2    libs/ui/kis_node_manager.cpp
M  +4    -2    plugins/dockers/animation/timeline_docker.cpp
M  +15   -2    plugins/dockers/animation/timeline_frames_index_converter.cpp
M  +3    -0    plugins/dockers/animation/timeline_frames_index_converter.h
M  +5    -2    plugins/dockers/animation/timeline_frames_model.cpp
M  +4    -1    plugins/dockers/animation/timeline_frames_model.h
M  +46   -8    plugins/dockers/animation/timeline_node_list_keeper.cpp
M  +14   -1    plugins/dockers/animation/timeline_node_list_keeper.h

https://invent.kde.org/kde/krita/commit/02f9b56f281a55fb0f014f4fe0e0559cc8b2be88