Fix visibility of Reference Layer and Global Selection Mask in Timeline

1) Fake nodes should not be visible in the timeline
2) Global selection should be visible depending on the GUI option,
   therefore we should link TimelineNodeListKeeper to
   KisNodeDisplayModeAdapter, so it would get proper notifications.

BUG:412905