libs/ui/kis_node_manager.cpp
@@ -1017,7 +1017,7 @@ void KisNodeManager::activateNextNode()
         node = activeNode->parent();
     }
 
-    while(node && isNodeHidden(node, true)) {
+    while(node && isNodeHidden(node, m_d->nodeDisplayModeAdapter->showGlobalSelectionMask())) {
         node = node->nextSibling();
     }
 
@@ -1045,7 +1045,7 @@ void KisNodeManager::activatePreviousNode()
         activeNode = activeNode->parent();
     }
 
-    while(node && isNodeHidden(node, true)) {
+    while(node && isNodeHidden(node, m_d->nodeDisplayModeAdapter->showGlobalSelectionMask())) {
         node = node->prevSibling();
     }
 
